conformance/tests/httproute-redirect-host-and-status.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-host-and-status
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hostname-redirect
    filters:
    - type: RequestRedirect
      requestRedirect:
        hostname: example.org
  - matches:
    - path:
        type: PathPrefix
        value: /host-and-status
    filters:
    - type: RequestRedirect
      requestRedirect:
        statusCode: 301
        hostname: example.org
